swagger docs for routes
